--- a/tasks/gulp/package.json
+++ b/tasks/gulp/package.json
@@ -5,9 +5,11 @@
   "version": "0.1.0",
   "dependencies": {
     "del": "^2.2.0",
+    "extend": "^3.0.0",
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.2",
     "gulp-changed": "^1.3.0",
+    "gulp-data": "^1.2.1",
     "gulp-jade": "^1.1.0",
     "gulp-stylus": "^2.3.0",
     "run-sequence": "^1.1.5"
